# src/plan-openapi.yaml
@@ -1267,6 +1267,413 @@ paths:
               description: 'Geeft een specifieke API-versie aan in de context van
                 een specifieke aanroep. Voorbeeld: 1.2.1.'
           description: No response body
+  /relatie:
+    get:
+      operationId: relatie_list
+      description: Deze lijst kan gefilterd wordt met query-string parameters.
+      summary: Alle relaties opvragen.
+      parameters:
+      - name: page
+        required: false
+        in: query
+        description: Een pagina binnen de gepagineerde set resultaten.
+        schema:
+          type: integer
+      - name: pageSize
+        required: false
+        in: query
+        description: 'Het aantal resultaten terug te geven per pagina. (default: 100).'
+        schema:
+          type: integer
+      tags:
+      - Relatie
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedRelatieList'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/PaginatedRelatieList'
+          description: ''
+    post:
+      operationId: relatie_create
+      description: Voeg een nieuw relatie toe aan het systeem.
+      summary: Nieuw relatie aanmaken.
+      tags:
+      - Relatie
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Relatie'
+        required: true
+      security:
+      - tokenAuth: []
+      responses:
+        '201':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+          description: ''
+  /relatie/{uuid}:
+    get:
+      operationId: relatie_retrieve
+      description: Een specifiek relatie opvragen via UUID.
+      summary: Een specifiek relatie opvragen.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatie
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+          description: ''
+    put:
+      operationId: relatie_update
+      description: Werk alle gegevens van een relatie bij.
+      summary: Relatie volledig bijwerken.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatie
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Relatie'
+        required: true
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+          description: ''
+    patch:
+      operationId: relatie_partial_update
+      description: Werk enkele gegevens van een relatie bij.
+      summary: Relatie gedeeltelijk bijwerken.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatie
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchedRelatie'
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Relatie'
+          description: ''
+    delete:
+      operationId: relatie_destroy
+      description: Verwijder een specifiek relatie.
+      summary: Relatie verwijderen.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatie
+      security:
+      - tokenAuth: []
+      responses:
+        '204':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          description: No response body
+  /relatietype:
+    get:
+      operationId: relatietype_list
+      description: Deze lijst kan gefilterd wordt met query-string parameters.
+      summary: Alle relatietypes opvragen.
+      parameters:
+      - in: query
+        name: naam
+        schema:
+          type: string
+        description: Naam van het relatietype
+      - name: page
+        required: false
+        in: query
+        description: Een pagina binnen de gepagineerde set resultaten.
+        schema:
+          type: integer
+      - name: pageSize
+        required: false
+        in: query
+        description: 'Het aantal resultaten terug te geven per pagina. (default: 100).'
+        schema:
+          type: integer
+      tags:
+      - Relatietype
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedRelatieTypeList'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/PaginatedRelatieTypeList'
+          description: ''
+    post:
+      operationId: relatietype_create
+      description: Voeg een nieuw relatietype toe aan het systeem.
+      summary: Nieuw relatietype aanmaken.
+      tags:
+      - Relatietype
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RelatieType'
+        required: true
+      security:
+      - tokenAuth: []
+      responses:
+        '201':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+          description: ''
+  /relatietype/{uuid}:
+    get:
+      operationId: relatietype_retrieve
+      description: Een specifiek relatietype opvragen via UUID.
+      summary: Een specifiek relatietype opvragen.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatietype
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+          description: ''
+    put:
+      operationId: relatietype_update
+      description: Werk alle gegevens van een relatietype bij.
+      summary: Relatietype volledig bijwerken.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatietype
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RelatieType'
+        required: true
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+          description: ''
+    patch:
+      operationId: relatietype_partial_update
+      description: Werk enkele gegevens van een relatietype bij.
+      summary: Relatietype gedeeltelijk bijwerken.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatietype
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchedRelatieType'
+      security:
+      - tokenAuth: []
+      responses:
+        '200':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RelatieType'
+          description: ''
+    delete:
+      operationId: relatietype_destroy
+      description: Verwijder een specifiek relatietype.
+      summary: Relatietype verwijderen.
+      parameters:
+      - in: path
+        name: uuid
+        schema:
+          type: string
+          format: uuid
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        required: true
+      tags:
+      - Relatietype
+      security:
+      - tokenAuth: []
+      responses:
+        '204':
+          headers:
+            API-version:
+              schema:
+                type: string
+              description: 'Geeft een specifieke API-versie aan in de context van
+                een specifieke aanroep. Voorbeeld: 1.2.1.'
+          description: No response body
 components:
   schemas:
     Doel:
@@ -1503,6 +1910,52 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PlanType'
+    PaginatedRelatieList:
+      type: object
+      required:
+      - count
+      - results
+      properties:
+        count:
+          type: integer
+          example: 123
+        next:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?page=4
+        previous:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?page=2
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Relatie'
+    PaginatedRelatieTypeList:
+      type: object
+      required:
+      - count
+      - results
+      properties:
+        count:
+          type: integer
+          example: 123
+        next:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?page=4
+        previous:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?page=2
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/RelatieType'
     PatchedDoel:
       type: object
       properties:
@@ -1636,6 +2089,56 @@ components:
             * `pip` - Persoonlijk plan inburgering en perticipatie
             * `werk` - Werk
             * `inkomen` - Inkomen
+    PatchedRelatie:
+      type: object
+      properties:
+        uuid:
+          type: string
+          format: uuid
+          readOnly: true
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        persoon:
+          allOf:
+          - $ref: '#/components/schemas/Persoon'
+          readOnly: true
+          description: Unieke resource identifier (UUID4)
+        persoonUuid:
+          type: string
+          format: uuid
+          writeOnly: true
+          description: UUID van de primaire persoon.
+        gerelateerdePersoon:
+          allOf:
+          - $ref: '#/components/schemas/Persoon'
+          readOnly: true
+          description: Unieke resource identifier (UUID4)
+        gerelateerdePersoonUuid:
+          type: string
+          format: uuid
+          writeOnly: true
+          description: UUID van de gerelateerde persoon.
+        relatietype:
+          allOf:
+          - $ref: '#/components/schemas/RelatieType'
+          readOnly: true
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        relatietypeUuid:
+          type: string
+          format: uuid
+          writeOnly: true
+          description: UUID van het relatietype.
+    PatchedRelatieType:
+      type: object
+      properties:
+        uuid:
+          type: string
+          format: uuid
+          readOnly: true
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        naam:
+          type: string
+          description: Naam van het relatietype
+          maxLength: 100
     Persoon:
       type: object
       properties:
@@ -1716,6 +2219,67 @@ components:
         * `pip` - Persoonlijk plan inburgering en perticipatie
         * `werk` - Werk
         * `inkomen` - Inkomen
+    Relatie:
+      type: object
+      properties:
+        uuid:
+          type: string
+          format: uuid
+          readOnly: true
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        persoon:
+          allOf:
+          - $ref: '#/components/schemas/Persoon'
+          readOnly: true
+          description: Unieke resource identifier (UUID4)
+        persoonUuid:
+          type: string
+          format: uuid
+          writeOnly: true
+          description: UUID van de primaire persoon.
+        gerelateerdePersoon:
+          allOf:
+          - $ref: '#/components/schemas/Persoon'
+          readOnly: true
+          description: Unieke resource identifier (UUID4)
+        gerelateerdePersoonUuid:
+          type: string
+          format: uuid
+          writeOnly: true
+          description: UUID van de gerelateerde persoon.
+        relatietype:
+          allOf:
+          - $ref: '#/components/schemas/RelatieType'
+          readOnly: true
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        relatietypeUuid:
+          type: string
+          format: uuid
+          writeOnly: true
+          description: UUID van het relatietype.
+      required:
+      - gerelateerdePersoon
+      - gerelateerdePersoonUuid
+      - persoon
+      - persoonUuid
+      - relatietype
+      - relatietypeUuid
+      - uuid
+    RelatieType:
+      type: object
+      properties:
+        uuid:
+          type: string
+          format: uuid
+          readOnly: true
+          description: Unieke resource identifier (UUID4) voor deze functie.
+        naam:
+          type: string
+          description: Naam van het relatietype
+          maxLength: 100
+      required:
+      - naam
+      - uuid
   securitySchemes:
     tokenAuth:
       type: apiKey
